--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,94 +16,21 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.form-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 10px;
-  border-radius: 8px;
-  padding: 8px 16px;
-  width: 95px;
+#search-input {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #808080;
+  width: 272px;
   height: 40px;
-  background: #4e75ff;
-  font: 500 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #fff;
-}
-.form-button:hover {
-  background: #6c8cff;
-}
-.form-button[disabled] {
-  background: #cfcfcf;
-  color: #989898;
-}
-label {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-}
-
-textarea {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  width: 360px;
-  height: 80px;
   box-sizing: border-box;
 }
-legend {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
+#search-input:hover {
+  border: 1px solid #000;
+  border-radius: 4px;
 }
-input {
-  width: 360px;
-  height: 40px;
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  padding: 8px;
-  padding-left: 16px;
-  box-sizing: border-box;
-}
-.input-promise {
-  width: auto;
-  height: auto;
-}
-.timer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
-  gap: 24px;
-}
-.field {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.value {
-  font: 400 40px / 1.2 'Montserrat', sans-serif;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-}
-.label {
-  font: 400 16px / 1.5 'Montserrat', sans-serif;
-  color: #2e2f42;
-}
-.form {
-  width: 360px;
-}
-.fieldset {
-  height: 78px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
-  -webkit-appearance: 'Always Show Up/Down Arrows';
+#search-input:focus {
+  border: 1px solid #4e75ff;
+  border-radius: 4px;
 }
