--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,22 +15,60 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+.search-bar {
+  margin: 0 auto;
+  width: 371px;
+  height: 40px;
+}
 #search-input {
+  width: 272px;
+  height: 40px;
+  box-sizing: border-box;
+  padding: 8px;
+  padding-left: 16px;
+}
+#search-input:placeholder-shown {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.04em;
   color: #808080;
-  width: 272px;
-  height: 40px;
-  box-sizing: border-box;
 }
 #search-input:hover {
   border: 1px solid #000;
   border-radius: 4px;
 }
 #search-input:focus {
+  outline: 1px solid #4e75ff;
   border: 1px solid #4e75ff;
   border-radius: 4px;
+}
+#search-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background: #4e75ff;
+  margin-left: 8px;
+}
+#search-button:hover {
+  background: #6c8cff;
+}
+
+.gallery {
+  display: flex;
+  gap: 24px;
+  width: 1128px;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.gallery-item {
+  display: block;
+  width: calc((100% - 48px) / 3);
+}
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
