--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 @import url('./reset.css');
-/* @import url('./iziToast.css'); */
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -19,6 +19,7 @@
   margin: 0 auto;
   width: 371px;
   height: 40px;
+  margin-bottom: 32px;
 }
 #search-input {
   width: 272px;
